# Dusk-mk5

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  setup.ps1  setup.sh
cmake/: ExampleProject.cmake  FindDMF.cmake  FindDevIL.cmake  FindDusk.cmake  FindFlatBuffers.cmake  FindFlatCC.cmake  FindGLEW.cmake  FindGLMM.cmake  FindSOIL.cmake
dmfc/: CMakeLists.txt  dmf_generated.h
dmfc/src/: dmfc.cpp  tiny_obj_loader.h
examples/: CMakeLists.txt
examples/cube/: CMakeLists.txt
examples/cube/assets/: cube.dmf  cube.dmfz  flat.fs  flat.vs
examples/cube/src/: main.c
examples/flat/: CMakeLists.txt
examples/flat/assets/: cube.dmf  flat.fs  flat.fs.glsl  flat.vs  flat.vs.glsl
examples/flat/src/: main.c
examples/hello/: CMakeLists.txt
examples/hello/assets/: triangle.fs  triangle.vs
examples/hello/src/: main.c
examples/phong/: CMakeLists.txt
examples/phong/assets/: monkey.dmf  monkey.dmfz  phong.fs  phong.fs.glsl  phong.vs  phong.vs.glsl
examples/phong/src/: main.c
examples/textured/: CMakeLists.txt
examples/textured/assets/: crate.dmf  crate.dmfz  globe.dmf  globe.dmfz  globe.mtl  textured.fs  textured.fs.glsl  textured.vs  textured.vs.glsl
examples/textured/src/: main.c
examples/triangle/: CMakeLists.txt
examples/triangle/assets/: triangle.fs.glsl  triangle.vs.glsl
examples/triangle/src/: main.c
examples/wave/: CMakeLists.txt
examples/wave/assets/: floor.fs.glsl  floor.vs.glsl  wave.fs.glsl  wave.vs.glsl
examples/wave/src/: main.c
flatbuffers/: dmf.fbs
libdusk/: CMakeLists.txt  config.h.in  dmf_verifier.h
libdusk/include/dusk/: camera.h  dmf.h  dmf_reader.h  dusk.h  material.h  mesh.h  model.h  resource.h  shader.h  texture.h  timer.h
libdusk/src/: camera.c  debug.h  dmf.c  dusk.c  input.c  input.h  material.c  mesh.c  model.c  resource.c  shader.c  texture.c  timer.c  util.h
